<resources>
    <string name="app_name">MultipleActivity</string>
    <string name="button_register_text">Register</string>
    <string name="button_login_text">Login</string>
    <string name="button_logout_text">Logout</string>
    <string name="edittext_username_hint">Input username</string>
    <string name="edittext_password_hint">Input password</string>
    <string name="edittext_product_name_hint">Input Product Name</string>
    <string name="edittext_product_count_hint">Input Count</string>
    <string name="edittext_product_price_hint">Input Price</string>
    <string name="button_pay">Pay</string>
    <string name="button_clear">Clear</string>
    <string name="button_exit">Exit</string>
    <string name="clear_question_title">Are you sure about cleaning?</string>
    <string name="clear_message_body">Cleaning all fields!</string>
    <string name="clear_yes_button">yes</string>
    <string name="clear_no_button">no</string>
    <string name="close_question_title">Are you sure?</string>
    <string name="close_message_body">App is closing…</string>
    <string name="close_yes_button">yes</string>
    <string name="close_no_button">no</string>
    <string name="button_exit_sys">Exit System</string>
    <string name="edittext_first_name_hint">Input first name</string>
    <string name="edittext_middle_name_hint">Input middle name</string>
    <string name="edittext_last_name_hint">Input last name</string>
    <string name="switch_middle_name_text">Middle Name</string>
    <string name="edittext_email_hint">Input email</string>
    <string name="edittext_confirm_password_hint">Confirm password</string>
    <string name="edittext_birth_date_hint">Input birth date</string>

    <string-array name="spinner_education_info">
        <item>Under Graduate</item>
        <item>Graduate</item>
        <item>MsC</item>
        <item>PhD</item>
    </string-array>


    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>Jun</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>