<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="nuricanozturk.dev.android.multipleactivity.viewmodel.RegisterActivityViewModel"/>
        <import type="nuricanozturk.dev.app.multipleactivity.library.databinding.binding.RegisterBirthDateStringConverter"/>
        <import type="nuricanozturk.dev.android.multipleactivity.viewmodel.RegisterInfo"/>
        <import type="android.widget.ArrayAdapter"/>

        <variable name="registerInfo" type="RegisterInfo" />
        <variable name="viewModel" type="RegisterActivityViewModel" />
        <variable name="confirmPassword" type="String" />
        <variable name="middleNameExists" type="boolean" />
        <variable name="educationSelectedPost" type="int" />
        <variable name="daySelectedPos" type="int" />
        <variable name="monthSelectedPos" type="int" />
        <variable name="yearSelectedPos" type="int" />
        <variable name="educationAdapter" type="ArrayAdapter&lt;String&gt;" />
        <variable name="monthAdapter" type="ArrayAdapter&lt;String&gt;" />
        <variable name="yearAdapter" type="ArrayAdapter&lt;Integer&gt;" />
        <variable name="dayAdapter" type="ArrayAdapter&lt;Integer&gt;" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".RegisterActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edittext_first_name_hint"
            android:text="@={registerInfo.firstName}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="textPersonName"
                android:hint="@string/edittext_middle_name_hint"
                android:enabled="@{middleNameExists}"
                android:text="@={registerInfo.middleName}" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/switch_middle_name_text"
                android:checked="@={middleNameExists}"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/edittext_last_name_hint"
            android:text="@={registerInfo.lastName}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/edittext_email_hint"
            android:text="@={registerInfo.email}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/edittext_password_hint"
            android:text="@={registerInfo.password}"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/edittext_confirm_password_hint"
            android:text="@={confirmPassword}"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:hint="@string/edittext_birth_date_hint"
            android:text="@={RegisterBirthDateStringConverter.toStr(registerInfo.birthDate)}" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adapter="@{dayAdapter}"
                android:selectedItemPosition="@={daySelectedPos}"
                android:onItemSelected="@{(av, v, pos, i) -> viewModel.handleChangeDay(pos)}"
                android:onNothingSelected="@{() -> viewModel.handleChangeDay(1)}"
                />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adapter="@{monthAdapter}"
                android:selectedItemPosition="@={monthSelectedPos}"
                android:onItemSelected="@{(av, v, pos, i) -> viewModel.handleChangeMonth(pos)}"
                android:onNothingSelected="@{() -> viewModel.handleChangeMonth(1)}"
                />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adapter="@{yearAdapter}"
                android:selectedItemPosition="@={yearSelectedPos}"
                android:onItemSelected="@{(av, v, pos, i) -> viewModel.handleChangeYear(pos)}"
                android:onNothingSelected="@{() -> viewModel.handleChangeYear(1)}"
                />
        </LinearLayout>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adapter="@{educationAdapter}"
            android:selectedItemPosition="@={educationSelectedPost}"
            android:onItemSelected="@{(av, v, pos, i) -> viewModel.handleChangeEducation(pos)}"
            android:onNothingSelected="@{() -> viewModel.handleChangeEducation(1)}"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register_text"
            android:onClick="@{() -> viewModel.handleRegisterButton()}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_exit" />


    </LinearLayout>
</layout>